Fix image paths

--- a/proje_1/index.html
+++ b/proje_1/index.html
@@ -14,7 +14,7 @@
     <hr>
     <h4>mobil versiyondasınız</h4>
     <div class="ur">
-        <img src="/bmw.jpg" alt="">
+        <img src="bmw.jpg" alt="">
         <span>5000 euro</span>
     </div>
     <div class="ut">
@@ -30,7 +30,7 @@
     <hr>
     <h4>mobil versiyondasınız</h4>
     <div class="ur">
-        <img src="/bmw.jpg" alt="">
+        <img src="bmw.jpg" alt="">
         <span>5000 euro</span>
     </div>
     <div class="ut">
@@ -47,7 +47,7 @@
     <hr>
     <h4>mobil versiyondasınız</h4>
     <div class="ur">
-        <img src="/bmw.jpg" alt="">
+        <img src="bmw.jpg" alt="">
         <span>5000 euro</span>
     </div>
     <div class="ut">
